Update Jira & Confluence to 11 parent poms